fix(style): Fix link color on dark mode #11

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,9 @@ body {
 
 body.dark-theme {
     @include mat.all-component-colors($dark-theme);
+    a{
+        color: white;
+    }
 }
 
 
